unpackaged/main/default/objects/Account/fields/LKM_AnzeigedatenDeID__c.field-meta.xml
<CustomField>
    <fullName>LKM_AnzeigedatenDeID__c</fullName>
    <description>Bewerberkampagne (anzeigendaten.de)</description>
    <inlineHelpText>Referenz für externe Leadquelle</inlineHelpText>
    <label>Anzeigedaten.de ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>