unpackaged/main/default/objects/Account/fields/LKM_BetreuerRegionalvertriebRollupHelper__c.field-meta.xml
<CustomField>
    <fullName>LKM_BetreuerRegionalvertriebRollupHelper__c</fullName>
    <label>Betreuer Regionalvertrieb-Rollup-Helper</label>
    <summaryFilterItems>
        <field>Betreuer__c.CL_Betreuungsrolle__c</field>
        <operation>equals</operation>
        <value>Regionalvertrieb</value>
    </summaryFilterItems>
    <summaryForeignKey>Betreuer__c.CL_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>