unpackaged/main/default/objects/Account/fields/LKM_BetreuungGesperrtFuerHunterHV__c.field-meta.xml
<CustomField>
    <fullName>LKM_BetreuungGesperrtFuerHunterHV__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Betreuung Gesperrt Für Hunter HV</label>
    <type>Checkbox</type>
</CustomField>