unpackaged/main/default/objects/Account/fields/LKM_cylexID__c.field-meta.xml
<CustomField>
    <fullName>LKM_cylexID__c</fullName>
    <description>Referenz für externe Leadquelle</description>
    <inlineHelpText>ID generiert von Cylex- Daten Lieferant</inlineHelpText>
    <label>cylexID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>