unpackaged/main/default/objects/Account/fields/LKM_DataloversID__c.field-meta.xml
<CustomField>
    <fullName>LKM_DataloversID__c</fullName>
    <description>ID generiert von Datalovers- Daten Lieferant</description>
    <externalId>true</externalId>
    <inlineHelpText>Referenz für externe Leadquelle</inlineHelpText>
    <label>Datalovers ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>