unpackaged/main/default/objects/Account/fields/LKM_DatenAktualisiertAm__c.field-meta.xml
<CustomField>
    <fullName>LKM_DatenAktualisiertAm__c</fullName>
    <description>Datum, wann die Daten vom Leadmgt. aktualisiert wurden</description>
    <inlineHelpText>Datum, wann die Daten vom Leadmgt. aktualisiert wurden</inlineHelpText>
    <label>Daten aktualisiert am</label>
    <type>Date</type>
</CustomField>