unpackaged/main/default/objects/Account/fields/LKM_DatenstatusTS__c.field-meta.xml
<CustomField>
    <fullName>LKM_DatenstatusTS__c</fullName>
    <description>Auswahlliste für die Überprüfung der Daten von Leads/Accounts von GoYellow und GoLocal. (Telesales)</description>
    <label>Datenstatus - TS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Correct</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Incorrect</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
            <value>
                <fullName>Not reviewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>