unpackaged/main/default/objects/Account/fields/LKM_Dublettenschluessel__c.field-meta.xml
<CustomField>
    <fullName>LKM_Dublettenschluessel__c</fullName>
    <label>Dublettenschlüssel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>