unpackaged/main/default/objects/Account/fields/LKM_EinspielDatum__c.field-meta.xml
<CustomField>
    <fullName>LKM_EinspielDatum__c</fullName>
    <description>Datum, wann ein Datensatz eingespielt wurde.
Um Daten zum richtigen Zeitpunkt zurückzumelden (GoYellow/GoLocal) und um HotLeads final abzuschließen</description>
    <label>Einspiel-Datum</label>
    <type>Date</type>
</CustomField>