unpackaged/main/default/objects/Account/fields/LKM_EmailZentrale__c.field-meta.xml
<CustomField>
    <fullName>LKM_EmailZentrale__c</fullName>
    <label>Email Zentrale</label>
    <type>Email</type>
</CustomField>