unpackaged/main/default/objects/Account/fields/LKM_Empfehlungsgeber__c.field-meta.xml
<CustomField>
    <fullName>LKM_Empfehlungsgeber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empfehlungsgeber</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Empfehlungsgeber)</relationshipLabel>
    <relationshipName>Accounts_Empfehlungsgeber</relationshipName>
    <type>Lookup</type>
</CustomField>