unpackaged/main/default/objects/Account/fields/LKM_GYAnalyseReportID__c.field-meta.xml
<CustomField>
    <fullName>LKM_GYAnalyseReportID__c</fullName>
    <description>Link zur GoYellow Analyse Tool</description>
    <label>GY - Analyse Report ID</label>
    <type>Url</type>
</CustomField>