unpackaged/main/default/objects/Account/fields/LKM_HeroCentralID__c.field-meta.xml
<CustomField>
    <fullName>LKM_HeroCentralID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Status Kunde HC</description>
    <inlineHelpText>Status Kunde HC</inlineHelpText>
    <label>HeroCentral ID</label>
    <type>Checkbox</type>
</CustomField>