unpackaged/main/default/objects/Account/fields/LKM_HeroCentralLink__c.field-meta.xml
<CustomField>
    <fullName>LKM_HeroCentralLink__c</fullName>
    <formula>HYPERLINK(&quot;https://herocentral.de/customer/&quot; &amp; LKM_KundennummerHC__c , &quot;https://herocentral.de/customer/&quot; &amp; LKM_KundennummerHC__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link ins ERP System von Regiohelden</inlineHelpText>
    <label>HeroCentral Link</label>
    <type>Text</type>
</CustomField>