unpackaged/main/default/objects/Account/fields/LKM_HunterAccountStatus__c.field-meta.xml
<CustomField>
    <fullName>LKM_HunterAccountStatus__c</fullName>
    <formula>CASE( LOWER(LKM_HunterStatus__c),
    &#39;frei&#39;, IMAGE(&#39;https://stroeer-eins--c.eu12.content.force.com/sfc/servlet.shepherd/version/download/0681r000007ExNe&#39;, &#39;Grün&#39;, 30, 30), 
    &#39;gesperrt&#39;, IMAGE(&#39;https://stroeer-eins--c.eu12.content.force.com/sfc/servlet.shepherd/version/download/0681r000007ExNd&#39;, &#39;Rot&#39;, 30, 30), 
    &#39;geparkt&#39;, IMAGE(&#39;https://stroeer-eins--c.eu12.content.force.com/sfc/servlet.shepherd/version/download/0681r000007ExNm&#39;, &#39;Blau&#39;, 30, 30), 
    &#39;in eigener bearbeitung&#39;, IMAGE(&#39;https://stroeer-eins--c.eu12.content.force.com/sfc/servlet.shepherd/version/download/0681r000007ExNn&#39;, &#39;Gelb&#39;, 30, 30),
    &#39;&#39;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hunter Account Status</label>
    <type>Text</type>
</CustomField>