unpackaged/main/default/objects/Account/fields/LKM_HunterEmail__c.field-meta.xml
<CustomField>
    <fullName>LKM_HunterEmail__c</fullName>
    <description>Hilfsfeld zur Abbildung der Hunter Benachrichtigung bei Account Sperrung</description>
    <label>Hunter Email</label>
    <type>Email</type>
</CustomField>