unpackaged/main/default/objects/Account/fields/LKM_HunterEmailBenachrichtigungStatus__c.field-meta.xml
<CustomField>
    <fullName>LKM_HunterEmailBenachrichtigungStatus__c</fullName>
    <description>Status der Email Benachrichtigung zur Steuerung des Prozesses Hunter Email Benachrichtigung. Der Status wird automatisiert gesetzt.</description>
    <label>Hunter Email Benachrichtigung Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offen</fullName>
            </value>
            <value>
                <fullName>Versendet</fullName>
            </value>
            <value>
                <fullName>Zu Versenden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>