unpackaged/main/default/objects/Account/fields/LKM_HunterHandelsvertreter__c.field-meta.xml
<CustomField>
    <fullName>LKM_HunterHandelsvertreter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hunter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Favoriten</relationshipName>
    <type>Lookup</type>
</CustomField>