unpackaged/main/default/objects/Account/fields/LKM_HunterSeit__c.field-meta.xml
<CustomField>
    <fullName>LKM_HunterSeit__c</fullName>
    <label>Hunter seit</label>
    <type>DateTime</type>
</CustomField>