unpackaged/main/default/objects/Account/fields/LKM_HunterStatus__c.field-meta.xml
<CustomField>
    <fullName>LKM_HunterStatus__c</fullName>
    <formula>if(
  NOT(ISNULL(LKM_HunterHandelsvertreter__c)) &amp;&amp; $User.Id = LKM_HunterHandelsvertreter__c,
  TEXT(LKM_HunterStatusInnen__c),
  TEXT(LKM_HunterStatusAussen__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hunter Status</label>
    <type>Text</type>
</CustomField>