unpackaged/main/default/objects/Account/fields/LKM_HunterStatusAussen__c.field-meta.xml
<CustomField>
    <fullName>LKM_HunterStatusAussen__c</fullName>
    <label>Hunter Status (Außensicht)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LKM_AccountStatusFuerHunter</valueSetName>
    </valueSet>
</CustomField>