unpackaged/main/default/objects/Account/fields/LKM_Importinfo1__c.field-meta.xml
<CustomField>
    <fullName>LKM_Importinfo1__c</fullName>
    <description>Das Feld dient lediglich zum Import von Kezis für eine Selektion / einen Export.</description>
    <label>Importinfo1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>