unpackaged/main/default/objects/Account/fields/LKM_Importinfo2__c.field-meta.xml
<CustomField>
    <fullName>LKM_Importinfo2__c</fullName>
    <description>Das Feld dient lediglich zum Import von Kezis für eine Selektion / einen Export.</description>
    <label>Importinfo2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>