unpackaged/main/default/objects/Account/fields/LKM_IndustryOberbranche__c.field-meta.xml
<CustomField>
    <fullName>LKM_IndustryOberbranche__c</fullName>
    <description>Achtung: Abhängige Auswahllisten 4 Ebenen</description>
    <label>Oberbranche</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agenturen</fullName>
            </value>
            <value>
                <fullName>Bank / Finanzdienstleistung / Versicherung</fullName>
            </value>
            <value>
                <fullName>Beauty / Kosmetik / Wellness</fullName>
            </value>
            <value>
                <fullName>Bildung</fullName>
            </value>
            <value>
                <fullName>Dienstleistung</fullName>
            </value>
            <value>
                <fullName>Elektronik / IT</fullName>
            </value>
            <value>
                <fullName>Freizeit</fullName>
            </value>
            <value>
                <fullName>Gastronomie</fullName>
            </value>
            <value>
                <fullName>Handel / Einkauf</fullName>
            </value>
            <value>
                <fullName>KFZ</fullName>
            </value>
            <value>
                <fullName>Lokale Medien</fullName>
            </value>
            <value>
                <fullName>Medizin / Gesundheit</fullName>
            </value>
            <value>
                <fullName>Öffentlichkeit</fullName>
            </value>
            <value>
                <fullName>Produzierende Industrie</fullName>
            </value>
            <value>
                <fullName>Recht</fullName>
            </value>
            <value>
                <fullName>Ströer-Branchen</fullName>
            </value>
            <value>
                <fullName>Tourismus</fullName>
            </value>
            <value>
                <fullName>Transport / Logistik</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>