unpackaged/main/default/objects/Account/fields/LKM_IndustryUnterbranche__c.field-meta.xml
<CustomField>
    <fullName>LKM_IndustryUnterbranche__c</fullName>
    <label>Unterbranche</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LKM_IndustryOberbranche__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abschleppdienst</fullName>
            </value>
            <value>
                <fullName>Agentur Sonstige</fullName>
            </value>
            <value>
                <fullName>Anwälte</fullName>
            </value>
            <value>
                <fullName>Apotheken</fullName>
            </value>
            <value>
                <fullName>Architektur</fullName>
            </value>
            <value>
                <fullName>Ärzte</fullName>
            </value>
            <value>
                <fullName>Autohaus</fullName>
            </value>
            <value>
                <fullName>Autohersteller</fullName>
            </value>
            <value>
                <fullName>Autovermietung</fullName>
            </value>
            <value>
                <fullName>Banken Sonstige</fullName>
            </value>
            <value>
                <fullName>Bars / Diskotheken</fullName>
            </value>
            <value>
                <fullName>Baumärkte</fullName>
            </value>
            <value>
                <fullName>Bauträger</fullName>
            </value>
            <value>
                <fullName>Beauty / Kosmetik / Wellness Sonstige</fullName>
            </value>
            <value>
                <fullName>Behörden / Verwaltung</fullName>
            </value>
            <value>
                <fullName>Beratung / Coaching</fullName>
            </value>
            <value>
                <fullName>Bestattung</fullName>
            </value>
            <value>
                <fullName>Brauerei / Getränkehersteller</fullName>
            </value>
            <value>
                <fullName>Caritative Organisationen</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Dienstleistung Sonstige</fullName>
            </value>
            <value>
                <fullName>Drogerie</fullName>
            </value>
            <value>
                <fullName>Druckereien</fullName>
            </value>
            <value>
                <fullName>Einkaufszentrum</fullName>
            </value>
            <value>
                <fullName>Einzelgastronomie</fullName>
            </value>
            <value>
                <fullName>Elektronik- / IT-Märkte</fullName>
            </value>
            <value>
                <fullName>Elektronik / IT Sonstige</fullName>
            </value>
            <value>
                <fullName>Energieversorger</fullName>
            </value>
            <value>
                <fullName>Entsorgungsbetriebe</fullName>
            </value>
            <value>
                <fullName>Erotik</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>