unpackaged/main/default/objects/Account/fields/LKM_KAMAccount__c.field-meta.xml
<CustomField>
    <fullName>LKM_KAMAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Zugehörigkeit zum KAM Vertriebskanal</description>
    <inlineHelpText>Zugehörigkeit zum KAM Vertriebskanal</inlineHelpText>
    <label>KAM Account</label>
    <type>Checkbox</type>
</CustomField>