unpackaged/main/default/objects/Account/fields/LKM_KdNrSF__c.field-meta.xml
<CustomField>
    <fullName>LKM_KdNrSF__c</fullName>
    <description>{00000000}
Startnummer: 1</description>
    <displayFormat>{0}</displayFormat>
    <label>Lfd. Kd. Nr. SF</label>
    <type>AutoNumber</type>
</CustomField>