unpackaged/main/default/objects/Account/fields/LKM_KundenKontaktsperre__c.field-meta.xml
<CustomField>
    <fullName>LKM_KundenKontaktsperre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kunden Kontaktsperre</label>
    <type>Checkbox</type>
</CustomField>