unpackaged/main/default/objects/Account/fields/LKM_KundenKontaktsperreDatum__c.field-meta.xml
<CustomField>
    <fullName>LKM_KundenKontaktsperreDatum__c</fullName>
    <inlineHelpText>Sperrdatum: Datum, an dem die Sperre gesetzt wurde.</inlineHelpText>
    <label>Kunden Kontaktsperre Datum</label>
    <type>Date</type>
</CustomField>