unpackaged/main/default/objects/Account/fields/LKM_KundenKontaktsperreEntfernt__c.field-meta.xml
<CustomField>
    <fullName>LKM_KundenKontaktsperreEntfernt__c</fullName>
    <label>Kunden-Kontaktsperre entfernt</label>
    <type>Date</type>
</CustomField>