unpackaged/main/default/objects/Account/fields/LKM_KundenKontaktsperreGesellschaft__c.field-meta.xml
<CustomField>
    <fullName>LKM_KundenKontaktsperreGesellschaft__c</fullName>
    <inlineHelpText>Gesellschaft gegenüber  der der Kunde die Kundenkontaktsperre ausgesprochen hat. Mehrfachauswahl möglich.</inlineHelpText>
    <label>Kunden Kontaktsperre Gesellschaft</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ambient-TV Sales &amp; Servic</fullName>
            </value>
            <value>
                <fullName>DERG Vertriebs GmbH</fullName>
            </value>
            <value>
                <fullName>DSA Schuldisplay GmbH</fullName>
            </value>
            <value>
                <fullName>DSM DeutscheStädte-Medien</fullName>
            </value>
            <value>
                <fullName>ECE flatmedia GmbH</fullName>
            </value>
            <value>
                <fullName>Edgar Ambient Media Group GmbH</fullName>
            </value>
            <value>
                <fullName>Grapevine Marketing GmbH</fullName>
            </value>
            <value>
                <fullName>Hoffmann City Media GmbH&amp;</fullName>
            </value>
            <value>
                <fullName>INFOSCREEN GmbH</fullName>
            </value>
            <value>
                <fullName>Lunenburg und Partner Gmb</fullName>
            </value>
            <value>
                <fullName>Media-Direktservice GmbH</fullName>
            </value>
            <value>
                <fullName>MediaSelect Media-Agentur</fullName>
            </value>
            <value>
                <fullName>Neo Advertising GmbH</fullName>
            </value>
            <value>
                <fullName>Omnea GmbH</fullName>
            </value>
            <value>
                <fullName>Outsite Media GmbH</fullName>
            </value>
            <value>
                <fullName>PosterSelect Media Agentur</fullName>
            </value>
            <value>
                <fullName>RegioHelden GmbH</fullName>
            </value>
            <value>
                <fullName>Retail Media GmbH</fullName>
            </value>
            <value>
                <fullName>SIGN YOU mediascreen GmbH</fullName>
            </value>
            <value>
                <fullName>Ströer DERG Media GmbH</fullName>
            </value>
            <value>
                <fullName>StröerDeutscheStädteMedien</fullName>
            </value>
            <value>
                <fullName>Ströer Media Brands GmbH</fullName>
            </value>
            <value>
                <fullName>Ströer Media Deutschland GmbH</fullName>
            </value>
            <value>
                <fullName>Ströer Sales &amp; Services G</fullName>
            </value>
            <value>
                <fullName>Ströer Social Publishing</fullName>
            </value>
            <value>
                <fullName>Super M&amp;N UG</fullName>
            </value>
            <value>
                <fullName>Superposter Out-of-Home M</fullName>
            </value>
            <value>
                <fullName>TubeOne Networks GmbH</fullName>
            </value>
            <value>
                <fullName>X-City Marketing GmbH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>