unpackaged/main/default/objects/Account/fields/LKM_KundenKontaktsperreGrund__c.field-meta.xml
<CustomField>
    <fullName>LKM_KundenKontaktsperreGrund__c</fullName>
    <inlineHelpText>Zentraler Ansprechpartner = Kunde wünscht ausdrücklich, nur von einer Stelle bei Ströer kontaktiert zu werden.</inlineHelpText>
    <label>Kunden Kontaktsperre Grund</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unterlassungserklärung</fullName>
            </value>
            <value>
                <fullName>Kunde wünscht keinen Kontakt (siehe Notiz/Dokumente)</fullName>
                <default>true</default>
                <label>Kunde wünscht keinen Kontakt (siehe Notiz/Dokumente)</label>
            </value>
            <value>
                <fullName>Zentraler Ansprechpartner (siehe Notiz/Dokumente)</fullName>
                <isActive>false</isActive>
                <label>Zentraler Ansprechpartner (siehe Notiz/Dokumente)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>