unpackaged/main/default/objects/Account/fields/LKM_KundennummerHC__c.field-meta.xml
<CustomField>
    <fullName>LKM_KundennummerHC__c</fullName>
    <externalId>true</externalId>
    <label>Kundennummer HC</label>
    <length>8</length>
    <type>Text</type>
</CustomField>