unpackaged/main/default/objects/Account/fields/LKM_LeadDatenstatus__c.field-meta.xml
<CustomField>
    <fullName>LKM_LeadDatenstatus__c</fullName>
    <label>Lead Datenstatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Existent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>