unpackaged/main/default/objects/Account/fields/LKM_LocationIdTS__c.field-meta.xml
<CustomField>
    <fullName>LKM_LocationIdTS__c</fullName>
    <description>Übermittelte ID (Location oder SugarID) von Golocal/GoYellow. (Telesales)</description>
    <label>Location Id TS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>