unpackaged/main/default/objects/Account/fields/LKM_LokalvertriebRVKL__c.field-meta.xml
<CustomField>
    <fullName>LKM_LokalvertriebRVKL__c</fullName>
    <formula>LKM_Region__r.LKM_LokalvertriebRVKL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lokalvertrieb (RVKL)</label>
    <type>Text</type>
</CustomField>