unpackaged/main/default/objects/Account/fields/LKM_MDSAnsprechpartner__c.field-meta.xml
<CustomField>
    <fullName>LKM_MDSAnsprechpartner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>MDS Ansprechpartner</label>
    <referenceTo>Mitarbeiter__c</referenceTo>
    <relationshipLabel>Accounts (MDS Ansprechpartner)</relationshipLabel>
    <relationshipName>Accounts_MDS_Ansprechpartner</relationshipName>
    <type>Lookup</type>
</CustomField>