unpackaged/main/default/objects/Account/fields/LKM_MeineFavoritenHunter__c.field-meta.xml
<CustomField>
    <fullName>LKM_MeineFavoritenHunter__c</fullName>
    <description>Hilfsfeld zur Selektion aller Accounts, bei dem der eingeloggte User der hinterlegte Hunter ist. Das Hilfsfeld dient nur zur Filterung in Listenansichten und Berichten und ist nicht im Seitenlayout eingeblendet.</description>
    <formula>IF( LKM_HunterHandelsvertreter__c = $User.Id ,True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meine Favoriten (Hunter)</label>
    <type>Checkbox</type>
</CustomField>