unpackaged/main/default/objects/Account/fields/LKM_MergedAccountId__c.field-meta.xml
<CustomField>
    <fullName>LKM_MergedAccountId__c</fullName>
    <externalId>true</externalId>
    <label>Merged Account Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>