unpackaged/main/default/objects/Account/fields/LKM_Neo_Debitoren_Nr__c.field-meta.xml
<CustomField>
    <fullName>LKM_Neo_Debitoren_Nr__c</fullName>
    <label>Neo Debitoren-Nr.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>