unpackaged/main/default/objects/Account/fields/LKM_NextContactTime__c.field-meta.xml
<CustomField>
    <fullName>LKM_NextContactTime__c</fullName>
    <label>Next Contact Time LKM</label>
    <type>DateTime</type>
</CustomField>