unpackaged/main/default/objects/Account/fields/LKM_NiederlassungAccount__c.field-meta.xml
<CustomField>
    <fullName>LKM_NiederlassungAccount__c</fullName>
    <formula>LKM_Region__r.LKM_Niederlassung__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vertriebsgebiet Regional</label>
    <type>Text</type>
</CustomField>