unpackaged/main/default/objects/Account/fields/LKM_NPSScore__c.field-meta.xml
<CustomField>
    <fullName>LKM_NPSScore__c</fullName>
    <description>Net Promoter Score in SF eingetragen</description>
    <inlineHelpText>Net Promoter Score</inlineHelpText>
    <label>NPS Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>