unpackaged/main/default/objects/Account/fields/LKM_NVMCallMade__c.field-meta.xml
<CustomField>
    <fullName>LKM_NVMCallMade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gemachter Anruf</label>
    <type>Checkbox</type>
</CustomField>