unpackaged/main/default/objects/Account/fields/LKM_NVMDateOfLastCall__c.field-meta.xml
<CustomField>
    <fullName>LKM_NVMDateOfLastCall__c</fullName>
    <label>Datum des letzten Anrufs</label>
    <type>DateTime</type>
</CustomField>