unpackaged/main/default/objects/Account/fields/LKM_NVMLastAgentSpokenTo__c.field-meta.xml
<CustomField>
    <fullName>LKM_NVMLastAgentSpokenTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Letzter Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>