unpackaged/main/default/objects/Account/fields/LKM_NVMNumberOfCalls__c.field-meta.xml
<CustomField>
    <fullName>LKM_NVMNumberOfCalls__c</fullName>
    <label>Anzahl der Anrufe</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>