unpackaged/main/default/objects/Account/fields/LKM_OffeneOpportunities__c.field-meta.xml
<CustomField>
    <fullName>LKM_OffeneOpportunities__c</fullName>
    <label>Offene Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Gewonnen/Auftrag, Verloren</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>