unpackaged/main/default/objects/Account/fields/LKM_OmneaSalesforceId__c.field-meta.xml
<CustomField>
    <fullName>LKM_OmneaSalesforceId__c</fullName>
    <label>Omnea Salesforce Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>