unpackaged/main/default/objects/Account/fields/LKM_Onlineshop__c.field-meta.xml
<CustomField>
    <fullName>LKM_Onlineshop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onlineshop</label>
    <type>Checkbox</type>
</CustomField>