unpackaged/main/default/objects/Account/fields/LKM_PlacescoutId__c.field-meta.xml
<CustomField>
    <fullName>LKM_PlacescoutId__c</fullName>
    <label>Placescout ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>