unpackaged/main/default/objects/Account/fields/LKM_PremiumEintragBranchenbuch__c.field-meta.xml
<CustomField>
    <fullName>LKM_PremiumEintragBranchenbuch__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Quelle: Yasni</inlineHelpText>
    <label>Premium Eintrag Branchenbuch</label>
    <type>Checkbox</type>
</CustomField>