unpackaged/main/default/objects/Account/fields/LKM_PremiumEintragGefunden__c.field-meta.xml
<CustomField>
    <fullName>LKM_PremiumEintragGefunden__c</fullName>
    <description>Datum, wann ein Premium Branchenbucheintrag gefunden wurde</description>
    <inlineHelpText>Datum, wann ein Premium Branchenbucheintrag gefunden wurde</inlineHelpText>
    <label>Premium Eintrag gefunden am</label>
    <type>Date</type>
</CustomField>