unpackaged/main/default/objects/Account/fields/LKM_Provision__c.field-meta.xml
<CustomField>
    <fullName>LKM_Provision__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Empfehlungsgeber Prozess</description>
    <inlineHelpText>Angabe, ob der Empfehlungsgeber eine Provision erhält</inlineHelpText>
    <label>Provision</label>
    <type>Checkbox</type>
</CustomField>