unpackaged/main/default/objects/Account/fields/LKM_Region__c.field-meta.xml
<CustomField>
    <fullName>LKM_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Umbenennung des Feldes Region in Region VSC (SL-148)</description>
    <label>Region VSC</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>