unpackaged/main/default/objects/Account/fields/LKM_RegionAccount__c.field-meta.xml
<CustomField>
    <fullName>LKM_RegionAccount__c</fullName>
    <formula>LKM_Region__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region Account</label>
    <type>Text</type>
</CustomField>