unpackaged/main/default/objects/Account/fields/LKM_RHSalesforceId__c.field-meta.xml
<CustomField>
    <fullName>LKM_RHSalesforceId__c</fullName>
    <label>RH Salesforce Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>