unpackaged/main/default/objects/Account/fields/LKM_SEVDESK_ID__c.field-meta.xml
<CustomField>
    <fullName>LKM_SEVDESK_ID__c</fullName>
    <label>SEVDESK-ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>