unpackaged/main/default/objects/Account/fields/LKM_SignYou_GS_Kunden_ID__c.field-meta.xml
<CustomField>
    <fullName>LKM_SignYou_GS_Kunden_ID__c</fullName>
    <label>SignYou GS-Kunden-ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>