unpackaged/main/default/objects/Account/fields/LKM_telesalesUniqueID__c.field-meta.xml
<CustomField>
    <fullName>LKM_telesalesUniqueID__c</fullName>
    <description>telesalesUniqueID - weitere Cylex ID - die für die Abrechnung dient</description>
    <label>telesalesUniqueID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>