unpackaged/main/default/objects/Account/fields/LKM_Umsatzklassifizierung__c.field-meta.xml
<CustomField>
    <fullName>LKM_Umsatzklassifizierung__c</fullName>
    <inlineHelpText>A &gt; 250T
B &gt; 100T
C1 &gt; 50T
C2 &gt; 10T
D &gt; 5T
E &gt;0</inlineHelpText>
    <label>Umsatzklassifizierung</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>