unpackaged/main/default/objects/Account/fields/LKM_UstSteuerpflicht__c.field-meta.xml
<CustomField>
    <fullName>LKM_UstSteuerpflicht__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ust. Steuerpflicht</label>
    <type>Checkbox</type>
</CustomField>