unpackaged/main/default/objects/Account/fields/LKM_VertriebsgebietAccount__c.field-meta.xml
<CustomField>
    <fullName>LKM_VertriebsgebietAccount__c</fullName>
    <description>Feldumbenennung von Vertriebsgebiet Account zu Vertriebsgebiet Onliner (SL148)</description>
    <formula>LKM_Region__r.LKM_Vertriebsgebiet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vertriebsgebiet Onliner</label>
    <type>Text</type>
</CustomField>