unpackaged/main/default/objects/Account/fields/LKM_Zufriedenheitsstatus__c.field-meta.xml
<CustomField>
    <fullName>LKM_Zufriedenheitsstatus__c</fullName>
    <description>Information darüber, wie zufrieden der Kunde mit dem Kundenservice ist</description>
    <label>Zufriedenheitsstatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>:(</fullName>
            </value>
            <value>
                <fullName>:/</fullName>
            </value>
            <value>
                <fullName>:|</fullName>
            </value>
            <value>
                <fullName>:)</fullName>
            </value>
            <value>
                <fullName>:D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>