unpackaged/main/default/objects/Account/fields/LKM_ZURMOID__c.field-meta.xml
<CustomField>
    <fullName>LKM_ZURMOID__c</fullName>
    <description>ID vom System &quot;Zurmo&quot;</description>
    <label>ZURMO-ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>