unpackaged/main/default/objects/Account/fields/LKM_Zusatzinfo__c.field-meta.xml
<CustomField>
    <fullName>LKM_Zusatzinfo__c</fullName>
    <description>Zusatzinfos, die von der Landingpage der Hotleads kommen z.B. für welche Produkte interessiert sich die Firma</description>
    <label>Zusatzinfo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>